<resources>
    <string name="app_name">My Firebase Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Quiz App</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="password">Password</string>
    <string name="name">Email</string>
    <string name="loginactivity">LogInActivity</string>
    <string name="submit">Submit</string>
    <string name="btn_SinIn">SignIn</string>
    <string name="btn_login">LogIn</string>
    <string name="already_have_an_account_login">Already Have an Account</string>
    <string name="do_not_have">Do not Have an Account</string>
    <string name="signuoactivity">SignUpActivity</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="user_name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="address">Address</string>
    <string name="collegename">CollegeName</string>
    <string name="className">Class</string>
    <string name="section">Section</string>
    <string name="rollno">RollNo</string>
    <string name="result">Result</string>
    <string name="hey_congratulations">Hey Congratulations</string>
    <string name="username">UserName</string>
    <string name="your_score_is_9_out_of_10">Your Score is 9 out of 10</string>
    <string name="finish">Finish</string>
    <string name="tv_submit">SUBMIT</string>
    <string name="tv_finish">FINISH</string>
    <string name="tv_go_to_next">GO TO NEXT PAGE</string>

</resources>