<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#34eb"
    tools:context=".ui.gallery.GalleryFragment">
    <androidx.appcompat.widget.AppCompatTextView
        android:textColor="@color/black"
        android:text="@string/result"
        android:id="@+id/tvResult"
        android:layout_marginTop="20dp"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvResult"
        android:id="@+id/imgQuiz"
        android:src="@drawable/img_troffy_score"
        android:layout_width="150dp"
        android:layout_height="150dp"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:text="@string/hey_congratulations"
        android:id="@+id/tvCongo"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/imgQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:text="@string/username"
        android:id="@+id/tvUserName"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCongo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:textColor="@color/black"
        android:layout_marginTop="40dp"
        android:text="@string/your_score_is_9_out_of_10"
        android:id="@+id/tvScore"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/BtnSubmit"

        android:background="@color/teal_200"
        android:layout_margin="20dp"
        android:text="@string/finish"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>




</androidx.constraintlayout.widget.ConstraintLayout>