<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/fullscreenBackgroundColor"
    android:theme="@style/ThemeOverlay.MyFirebaseApplication.FullscreenContainer"
    tools:context=".LogInActivity">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">

       <TextView
           android:id="@+id/text_home"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginStart="8dp"
           android:layout_marginTop="50dp"
           android:layout_marginEnd="8dp"
           android:textAlignment="center"
           android:textSize="40sp"
           android:text="@string/loginactivity"

           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/name"
        android:id="@+id/Name"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"

        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_home">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            tools:ignore="KeyboardInaccessibleWidget" />

    </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.textfield.TextInputLayout
           android:layout_marginStart="16dp"
           android:layout_marginTop="20dp"
           android:id="@+id/etPassword"
           android:layout_marginEnd="16dp"
           app:boxCornerRadiusBottomEnd="10dp"
           app:boxCornerRadiusBottomStart="10dp"
           app:boxCornerRadiusTopEnd="10dp"
           app:boxCornerRadiusTopStart="10dp"
           android:hint="@string/password"
           style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
           app:layout_constraintTop_toBottomOf="@+id/Name"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/Password"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"/>

       </com.google.android.material.textfield.TextInputLayout>

       <TextView
           app:layout_constraintTop_toBottomOf="@id/etPassword"
           android:id="@+id/tvRedirectLogin"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:gravity="center_horizontal"
           app:layout_constraintEnd_toEndOf="parent"
           android:layout_margin="10dp"
           android:text="@string/do_not_have"
           android:textColor="#18206F"
           android:textSize="16sp" />


       <com.google.android.gms.common.SignInButton
           android:layout_marginTop="60dp"
           app:layout_constraintTop_toBottomOf="@+id/etPassword"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/sign_in_button"
           android:layout_marginLeft="20dp"
           android:layout_marginRight="20dp"
           android:layout_alignParentBottom="true"
           android:layout_marginBottom="20dp">

       </com.google.android.gms.common.SignInButton>
   </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="@style/Widget.Theme.MyFirebaseApplication.ButtonBar.Fullscreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="horizontal"
            tools:ignore="UselessParent">


            <Button
                android:id="@+id/dummy_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_login" />

        </LinearLayout>


</FrameLayout>
